unpackaged/main/default/objects/pse__Task_Based_Resourcing__c/pse__Task_Based_Resourcing__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings for task-based resourcing.</description>
    <label>Task-Based Resourcing</label>
</CustomObject>