unpackaged/main/default/objects/pse__Task_Based_Resourcing__c/fields/pse__Assignment_Editable_Columns__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_Editable_Columns__c</fullName>
    <description>Enter the API name of the Assignment field set that defines the editable columns in the Resourcing From Project Tasks window.</description>
    <inlineHelpText>Enter the API name of the Assignment field set that defines the editable columns in the Resourcing From Project Tasks window.</inlineHelpText>
    <label>Assignment Editable Columns</label>
    <length>100</length>
    <type>Text</type>
</CustomField>