unpackaged/main/default/objects/pse__Task_Based_Resourcing__c/fields/pse__Resource_Request_Editable_Columns__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request_Editable_Columns__c</fullName>
    <description>The Resource Request field set that defines the editable columns in the Resourcing from Project Tasks window.</description>
    <inlineHelpText>Enter the API name of the Resource Request field set that defines the editable columns in the Resourcing From Project Tasks window.</inlineHelpText>
    <label>Resource Request Editable Columns</label>
    <length>100</length>
    <type>Text</type>
</CustomField>