unpackaged/main/default/objects/pse__Task_Based_Resourcing__c/fields/pse__Show_Estimated_Cost_Column__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Estimated_Cost_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the Estimated Cost column is shown in the Resourcing from Project Tasks window.</description>
    <inlineHelpText>Set to true to show the Estimated Cost column in the Resourcing from Project Tasks window.</inlineHelpText>
    <label>Show Estimated Cost Column</label>
    <type>Checkbox</type>
</CustomField>