unpackaged/main/default/objects/pse__Task_Based_Resourcing__c/fields/pse__Show_Estimated_Cost_For_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Estimated_Cost_For_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the value is true, the Estimated Cost column for Assignments is displayed in the Resourcing from Project Tasks window.</description>
    <inlineHelpText>When the value is true, the Estimated Cost column for Assignments is displayed in the Resourcing from Project Tasks window.</inlineHelpText>
    <label>Show Estimated Cost For Assignments</label>
    <type>Checkbox</type>
</CustomField>